--- a/index.html
+++ b/index.html
@@ -8,16 +8,10 @@
   <body>
     <span>Another line of copy here bro!</span>
     <h1>Hello world added by third account!</h1>
-    <p>Yay ya ya</p>
-    <p>Hello world!!!!</p>
-    <p>Hello again!</p>
-    <p>Hello again!</p>
-    <p>Hello again!</p>
-    <p>Hello again!</p>
-    <p>Hello again!</p>
-    <p>Hello again!</p>
-    <p>Hello again!</p>
-    <span>Hello you!</span>
-    <p>Hello again!</p>
+	<ul>
+		<li>Test1 </li>
+		<li>Test 2</li>
+		<li>Test 3</li>
+	</ul>
   </body>
 </html>
