added line of copy

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>New Document</title>
   </head>
   <body>
+    <p>Hello world!</p>
+
     <span>Another line of copy here bro!</span>
     <h1>Hello world added by third account!</h1>
 	<ul>
